...
            NavigationBarItem(
                selected = currentTab == MainTab.DOWNLOADS,
                onClick = { onTabSelected(MainTab.DOWNLOADS) },
                icon = { DownloadsBadge(viewModel) },
                label = {
                    Text(
                        text = "Downloads",
                        fontSize = Type.caption.fontSize,
                        fontWeight = FontWeight.SemiBold
                    )
                },
                colors = navBarItemColors()
            )
...
